Detect list page correctly and remove white space under list menu on left side

--- a/sitestatic/css/style.css
+++ b/sitestatic/css/style.css
@@ -848,6 +848,7 @@ input[name="list-name"] {
 #lists {
     display: none;
     list-style: none;
+    margin-bottom: 0;
 }
 
 #lists .list {
